packages/isar_community_generator/test/errors/class/variable.dart
// only classes

import 'package:isar_community/isar.dart';

// ignore: invalid_annotation_target - annotation intentionally applied to variable for testing error handling
@collection
const t = 'hello';
